refactor: 收斂相依查詢為單一批次查詢
「哪些任務在等哪些前置」原本有三條路徑(批次 id 版、單筆 Task 版、
預格式化字串版),述詞散落在兩處 JPQL 與一段 Java stream,容易漂移。
收斂成 findUnfinishedPrerequisites(taskIds) 一個投影查詢:

- 認領路徑:同一份結果同時用於過濾候選與說明「在等誰」,
  原本兩次查詢加每候選一次的 N+1 降為一次;List.contains 線性掃描
  改為 Map.containsKey
- list_tasks:迴圈內逐筆查詢改為迴圈前一次批次查詢
- createTasks:相依關係逐筆 save 改為 saveAll
- ClaimNextTaskResult 改帶結構化的 BlockedCandidate,字串組裝移回
  mcp 層(Service 不再產生給人看的中文訊息)
- 抽出重複的「找不到專案」訊息組裝
- 移除死碼:findByTaskId、TaskCard 的 5 參數建構子、
  blockedByDependency() 中恆真的 task == null

輸出與行為不變,已用真實 MCP 協定逐項比對訊息。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>